Bug 508285 - "Open in File Manager" not working with MTP/PTP
Summary: "Open in File Manager" not working with MTP/PTP
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Disks & Devices widget (other bugs)
Version First Reported In: 6.4.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-15 13:03 UTC by Miroslav Jarý
Modified: 2025-08-15 23:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Miroslav Jarý 2025-08-15 13:03:03 UTC
SUMMARY
"Open in File Manager" button does not work properly for MTP/PTP devices (I could verify with my Nikon camera & Android 13 phone) - it opens a user's home folder. However when using the "View Photos with File Manager" button hidden under the collapsible, the device's folder mounts just fine.

STEPS TO REPRODUCE
1. Plug in a device via USB using MTP/PTP protocol.
2. Open the Disks & Devices widget
3. Click the "Open in File Manager" button 

OBSERVED RESULT
Dolphin opens user's home folder.

EXPECTED RESULT
Button behaves the same as the "View Photos with File Manager" button.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Kernel Version: 6.16.0-zen2-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 12 × 13th Gen Intel® Core™ i5-13420H
Memory: 32 GiB of RAM (31,1 GiB usable)
Graphics Processor 1: Mesa Intel® Graphics
Graphics Processor 2: llvmpipe
Manufacturer: LENOVO
Product Name: 82XV
System Version: LOQ 15IRH8
Comment 1 Nate Graham 2025-08-15 16:40:33 UTC
I can reproduce the issue.
Comment 2 Bogdan Onofriuchuk 2025-08-15 21:08:41 UTC
Git commit 04f5d809cd947a6b28dbaa34f8211f5f1aa8142b by Bohdan Onofriichuk, on behalf of Bogdan Onofriichuk.
Committed on 15/08/2025 at 19:47.
Pushed by littlesweet into branch 'master'.

applets/devicenotifier: handle camera (ptp) devices

M  +4    -0    applets/devicenotifier/actions/mountandopenaction.cpp
M  +4    -0    applets/devicenotifier/actionscontrol.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/04f5d809cd947a6b28dbaa34f8211f5f1aa8142b
Comment 3 Nate Graham 2025-08-15 23:13:12 UTC
Git commit 618510ed0127011badb6df3fec43f5aaa34a6a7d by Nate Graham.
Committed on 15/08/2025 at 22:20.
Pushed by ngraham into branch 'Plasma/6.4'.

applets/devicenotifier: handle camera (ptp) devices


(cherry picked from commit 04f5d809cd947a6b28dbaa34f8211f5f1aa8142b)

Co-authored-by: Bogdan Onofriichuk <bogdan.onofriuchuk@gmail.com>

M  +4    -0    applets/devicenotifier/plugin/actions/mountandopenaction.cpp
M  +4    -0    applets/devicenotifier/plugin/actionscontrol.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/618510ed0127011badb6df3fec43f5aaa34a6a7d