applets/devicenotifier: handle camera (ptp) devices

BUG: 508285