applets/devicenotifier/plugin/actions/mountandopenaction.cpp
@@ -93,6 +93,10 @@ QString MountAndOpenAction::predicate() const
                     newPredicate = QLatin1String("solid_afc.desktop"); // this lives in kio-extras!
                     break;
                 }
+                if (protocol == u"ptp") {
+                    newPredicate = QLatin1String("solid_camera.desktop");
+                    break;
+                }
             }
         }
     }
